Added X-Total-Count headers to response definitions
