# authentication_service/api/views.py
@@ -1053,6 +1053,12 @@ class __SWAGGER_SPEC__(View):
                 "responses": {
                     "200": {
                         "description": "",
+                        "headers": {
+                            "X-Total-Count": {
+                                "description": "The total number of results matching the query",
+                                "type": "integer"
+                            }
+                        },
                         "schema": {
                             "items": {
                                 "$ref": "#/definitions/client",
@@ -1137,6 +1143,12 @@ class __SWAGGER_SPEC__(View):
                 "responses": {
                     "200": {
                         "description": "",
+                        "headers": {
+                            "X-Total-Count": {
+                                "description": "The total number of results matching the query",
+                                "type": "integer"
+                            }
+                        },
                         "schema": {
                             "items": {
                                 "$ref": "#/definitions/country",
@@ -1219,6 +1231,12 @@ class __SWAGGER_SPEC__(View):
                 "responses": {
                     "200": {
                         "description": "",
+                        "headers": {
+                            "X-Total-Count": {
+                                "description": "The total number of results matching the query",
+                                "type": "integer"
+                            }
+                        },
                         "schema": {
                             "items": {
                                 "$ref": "#/definitions/organisational_unit",
